crates/engine/src/snapshots/jigc_engine__write__methodology_roundtrip__methodology_canonical_idea_multi_language_doc_code.snap
---
source: crates/engine/src/write.rs
expression: rendered
---
---
trigger: M43
date: 2026-07-12
---

# Multi language doc code

## Description

The anchor gate is symbol-blind outside Rust. The tier-one slice is the Vue SFC arm.
