crates/engine/src/snapshots/jigc_engine__write__methodology_roundtrip__methodology_canonical_inconsistency_no_sides.snap
---
source: crates/engine/src/write.rs
expression: rendered
---
---
kind: doc-doc
date: 2026-10-03
---

# Two counts of the shipped schemas

## Sides


## Description

One guide counts eleven methodology schemas where the manifest lists thirteen.

## Evidence



## Resolution
