crates/engine/src/snapshots/jigc_engine__write__methodology_roundtrip__methodology_canonical_milestone_record_fresh.snap
---
source: crates/engine/src/write.rs
expression: rendered
---
---
base: a3c26dcfeedfacefeedfacefeedfacefeedface0
status: active
---

# M43

## Tasks
