crates/engine/src/snapshots/jigc_engine__write__methodology_roundtrip__methodology_canonical_milestone_record_two_tasks.snap
---
source: crates/engine/src/write.rs
expression: rendered
---
---
base: 1492317c0ffee1234567890abcdef1234567890
status: active
---

# M42

## Tasks

### fence-roundtrip  {#fence-roundtrip}

<!-- fields -->
- intent: Fence the methodology round-trip with deterministic cases.
- status: joined

### fence-slug  {#fence-slug}

<!-- fields -->
- intent: Pin the slug composition deterministically.
- status: active
