crates/engine/src/snapshots/jigc_engine__write__methodology_roundtrip__methodology_canonical_vision_grounded.snap
---
source: crates/engine/src/write.rs
expression: rendered
---
---
grounded-in: [research:context-compilers, research:agent-drift]
---

# Vision

## Thesis

Take every structural operation away from the LLM and give it to the CLI.

Leave the LLM only the prose.

## Invariants

The CLI core makes no LLM calls, and the LLM writes only through the CLI.

## Open Questions

Whether a third-party pack-authoring API ever earns its keep.
