crates/engine/src/snapshots/jigc_engine__write__methodology_roundtrip__methodology_canonical_vision_ungrounded.snap
---
source: crates/engine/src/write.rs
expression: rendered
---
---
---

# Vision

## Thesis

Take every structural operation away from the LLM and give it to the CLI.

## Invariants

The CLI core makes no LLM calls.

## Open Questions

Whether a third-party pack-authoring API ever earns its keep.
